--- a/Lab6/package.json
+++ b/Lab6/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server-start": "json-server --watch db.json --port 5000"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,8 @@
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "json-server" : "^0.17.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.2",
